--- a/app/src/main/res/layout/activity_input_harga.xml
+++ b/app/src/main/res/layout/activity_input_harga.xml
@@ -7,308 +7,242 @@
     android:layout_height="match_parent"
     android:background="@color/white_"
     android:orientation="vertical"
-    tools:context="com.example.baka57r.ezpy.InputNominal">
+    tools:context="com.example.baka57r.ezpy.InputNominal"
+    android:gravity="center">
 
-    <include
-        layout="@layout/custom_toolbar"/>
-
-    <android.support.constraint.ConstraintLayout
+    <!--<include
+        layout="@layout/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="190dp"/>-->
 
 
-        <RelativeLayout
-            android:id="@+id/relaqr"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rella11">
+    <com.example.baka57r.ezpy.utils.TextView_Lato
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Masukkan Nominal Transaksi"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:layout_marginTop="0dp"/>
 
-            <Button
-                android:id="@+id/generateQr"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@drawable/background_green"
-                android:onClick="tampil_qrcode"
-                android:text="Buat Kode QR "
-                android:textColor="@color/white_"
-                android:textSize="30sp"
-                android:layout_marginTop="15dp"/>
+    <EditText
+        android:id="@+id/TextInputTopup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:hint="Rp. 0"
+        android:singleLine="false"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/blue"
+        android:textSize="22sp"
+        android:backgroundTint="@color/blue"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"/>
 
-        </RelativeLayout>
+    <GridLayout
+        android:id="@+id/mainGrid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:columnCount="3"
+        android:rowCount="4">
 
-
-        <RelativeLayout
-            android:layout_marginTop="50dp"
-            android:id="@+id/rella1"
-            android:layout_width="match_parent"
-            android:layout_height="66dp"
-            tools:ignore="MissingConstraints">
-
-            <EditText
-                android:id="@+id/TextInputTopup"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="INPUT NOMINAL TRANSAKSI"
-                android:singleLine="false"
-                android:textAlignment="center"
-                android:textColor="@color/colorPrimary"
-                android:textColorHint="@color/common_google_signin_btn_text_dark_default"
-                android:textSize="22sp" />
-        </RelativeLayout>
-
-        !angka 1
-
-        <RelativeLayout
-            android:id="@+id/rella2"
-            android:layout_width="125dp"
+        <LinearLayout
+            android:onClick="insatu"
+            android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/rella3"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rella1">
-
-            <Button
-                android:id="@+id/bttn1"
+            android:background="@drawable/circle"
+            android:gravity="center">
+            <com.example.baka57r.ezpy.utils.TextView_Lato
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
-                android:background="@drawable/circle"
-                android:gravity="center_vertical|center_horizontal|center"
-                android:onClick="insatu"
                 android:text="1"
-                android:textSize="36sp" />
-        </RelativeLayout>
-        !angka 2
+                android:textColor="@color/blue"
+                android:textSize="35sp" />
+        </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/rella3"
-            android:layout_width="125dp"
+        <LinearLayout
+            android:onClick="indua"
+            android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/rella4"
-            app:layout_constraintStart_toEndOf="@id/rella2"
-            app:layout_constraintTop_toBottomOf="@+id/rella1">
-
-            <Button
-                android:id="@+id/bttn2"
+            android:background="@drawable/circle"
+            android:gravity="center"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp">
+            <com.example.baka57r.ezpy.utils.TextView_Lato
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
-                android:background="@drawable/circle"
-                android:gravity="center_vertical|center_horizontal|center"
-                android:onClick="indua"
                 android:text="2"
-                android:textSize="36sp"/>
-        </RelativeLayout>
-        !angka 3
+                android:textColor="@color/blue"
+                android:textSize="35sp"/>
+        </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/rella4"
-            android:layout_width="125dp"
+        <LinearLayout
+            android:onClick="intiga"
+            android:layout_width="75dp"
             android:layout_height="75dp"
-
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/rella3"
-            app:layout_constraintTop_toBottomOf="@+id/rella1">
-
-            <Button
-                android:id="@+id/bttn3"
+            android:background="@drawable/circle"
+            android:gravity="center">
+            <com.example.baka57r.ezpy.utils.TextView_Lato
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
-                android:background="@drawable/circle"
-                android:onClick="intiga"
                 android:text="3"
-                android:textSize="36sp" />
-        </RelativeLayout>
-        !angka 4
+                android:textColor="@color/blue"
+                android:textSize="35sp"/>
+        </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/rella5"
-            android:layout_width="125dp"
+        <LinearLayout
+            android:onClick="inempat"
+            android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_marginTop="12dp"
-            app:layout_constraintEnd_toStartOf="@+id/rella6"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rella2">
-
-            <Button
-                android:id="@+id/bttn4"
+            android:background="@drawable/circle"
+            android:gravity="center"
+            android:layout_marginTop="15dp">
+            <com.example.baka57r.ezpy.utils.TextView_Lato
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
-                android:background="@drawable/circle"
-                android:onClick="inempat"
                 android:text="4"
-                android:textSize="36sp" />
-        </RelativeLayout>
-        !angka 5
+                android:textColor="@color/blue"
+                android:textSize="35sp"/>
+        </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/rella6"
-            android:layout_width="125dp"
+        <LinearLayout
+            android:onClick="inlima"
+            android:layout_width="75dp"
             android:layout_height="75dp"
-
-            android:layout_marginTop="12dp"
-            app:layout_constraintEnd_toStartOf="@+id/rella7"
-            app:layout_constraintStart_toEndOf="@id/rella5"
-            app:layout_constraintTop_toBottomOf="@+id/rella3">
-
-            <Button
-                android:id="@+id/bttn5"
+            android:background="@drawable/circle"
+            android:gravity="center"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="20dp">
+            <com.example.baka57r.ezpy.utils.TextView_Lato
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
-                android:background="@drawable/circle"
-                android:onClick="inlima"
                 android:text="5"
-                android:textSize="36sp" />
-        </RelativeLayout>
-        !angka 6
+                android:textColor="@color/blue"
+                android:textSize="35sp"/>
+        </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/rella7"
-            android:layout_width="125dp"
+        <LinearLayout
+            android:onClick="inenam"
+            android:layout_width="75dp"
             android:layout_height="75dp"
-
-            android:layout_marginTop="12dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/rella6"
-            app:layout_constraintTop_toBottomOf="@+id/rella4">
-
-            <Button
-                android:id="@+id/bttn6"
+            android:background="@drawable/circle"
+            android:gravity="center"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp">
+            <com.example.baka57r.ezpy.utils.TextView_Lato
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
-                android:background="@drawable/circle"
-                android:onClick="inenam"
                 android:text="6"
-                android:textSize="36sp" />
-        </RelativeLayout>
-        !angka 7
+                android:textColor="@color/blue"
+                android:textSize="35sp"/>
+        </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/rella8"
-            android:layout_width="125dp"
+        <!-- COLUMN 2  -->
+
+        <LinearLayout
+            android:onClick="intujuh"
+            android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="12dp"
-            app:layout_constraintEnd_toStartOf="@+id/rella9"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rella5">
-
-            <Button
-                android:id="@+id/bttn7"
+            android:background="@drawable/circle"
+            android:gravity="center">
+            <com.example.baka57r.ezpy.utils.TextView_Lato
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
-                android:background="@drawable/circle"
-                android:onClick="intujuh"
                 android:text="7"
-                android:textSize="36sp" />
-        </RelativeLayout>
-        !angka 8
+                android:textColor="@color/blue"
+                android:textSize="35sp"/>
+        </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/rella9"
-            android:layout_width="125dp"
+        <LinearLayout
+            android:onClick="indelapan"
+            android:layout_width="75dp"
             android:layout_height="75dp"
-
-            android:layout_marginTop="12dp"
-            app:layout_constraintEnd_toStartOf="@+id/rella10"
-            app:layout_constraintStart_toEndOf="@id/rella8"
-            app:layout_constraintTop_toBottomOf="@+id/rella6">
-
-            <Button
-                android:id="@+id/bttn8"
+            android:background="@drawable/circle"
+            android:gravity="center"
+            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="15dp">
+            <com.example.baka57r.ezpy.utils.TextView_Lato
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
-                android:background="@drawable/circle"
-                android:onClick="indelapan"
                 android:text="8"
-                android:textSize="36sp"  />
-        </RelativeLayout>
+                android:textColor="@color/blue"
+                android:textSize="35sp"/>
+        </LinearLayout>
 
-        !angka 9
-
-        <RelativeLayout
-            android:id="@+id/rella10"
-            android:layout_width="125dp"
+        <LinearLayout
+            android:onClick="insembilan"
+            android:layout_width="75dp"
             android:layout_height="75dp"
-
-            android:layout_marginTop="12dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/rella9"
-            app:layout_constraintTop_toBottomOf="@+id/rella7">
-
-            <Button
-                android:id="@+id/bttn9"
+            android:background="@drawable/circle"
+            android:gravity="center">
+            <com.example.baka57r.ezpy.utils.TextView_Lato
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/colorPrimary"
-                android:background="@drawable/circle"
-                android:onClick="insembilan"
+                android:layout_height="wrap_content"
                 android:text="9"
-                android:textSize="36sp" />
-        </RelativeLayout>
-        !angka 0
+                android:textColor="@color/blue"
+                android:textSize="35sp"/>
+        </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/rella11"
-            android:layout_width="125dp"
-            android:layout_height="75dp"
-
-            android:layout_marginTop="12dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rella9">
-
-            <Button
-                android:id="@+id/bttn10"
+        <LinearLayout
+            android:background="@drawable/circle"
+            android:gravity="center"
+            android:visibility="gone">
+            <com.example.baka57r.ezpy.utils.TextView_Lato
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="insepuluh"
+                android:text="1"
+                android:textColor="@color/blue"
+                android:textSize="35sp"
+                android:visibility="gone"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:onClick="insepuluh"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:background="@drawable/circle"
+            android:gravity="center"
+            android:layout_marginLeft="15dp">
+            <com.example.baka57r.ezpy.utils.TextView_Lato
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="0"
-                android:textSize="36sp"
-                android:textColor="@color/colorPrimary"
-                android:background="@drawable/circle" />
+                android:textColor="@color/blue"
+                android:textSize="35sp"/>
+        </LinearLayout>
 
-        </RelativeLayout>
-        !Del
-
-        <RelativeLayout
-            android:id="@+id/rella12"
-            android:layout_width="125dp"
+        <LinearLayout
+            android:onClick="hps"
+            android:layout_width="75dp"
             android:layout_height="75dp"
-
-            android:layout_marginTop="12dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/rella11"
-            app:layout_constraintTop_toBottomOf="@+id/rella10">
-
-            <Button
-                android:id="@+id/bttndel"
+            android:background="@drawable/circle"
+            android:gravity="center">
+            <com.example.baka57r.ezpy.utils.TextView_Lato
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="hps"
-                android:textColor="@color/colorPrimary"
                 android:text="DEL"
-                android:textSize="24sp"
-                android:background="@drawable/circle"/>
+                android:textColor="@color/blue"
+                android:textSize="20sp"/>
+        </LinearLayout>
 
-        </RelativeLayout>
 
-    </android.support.constraint.ConstraintLayout>
+    </GridLayout>
 
+    <Button
+        android:id="@+id/generateQr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_green"
+        android:onClick="tampil_qrcode"
+        android:text="Buat Kode QR"
+        android:textColor="@color/white_"
+        android:textSize="24sp"
+        android:padding="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"/>
 
 </LinearLayout>
