--- a/app/src/main/res/layout/activity_pay_confirm.xml
+++ b/app/src/main/res/layout/activity_pay_confirm.xml
@@ -3,19 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <!--<include-->
-        <!--layout="@layout/custom_toolbar"/>-->
-
     <ImageView
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:layout_width="150dp"
         android:layout_height="40dp"
         android:background="@drawable/logo_color"
         android:layout_gravity="center"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="50dp"/>
 
     <View android:layout_width="fill_parent"
         android:layout_height="1.5dip"
@@ -139,7 +136,7 @@
     <Button
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
-        android:layout_marginTop="170dp"
+        android:layout_marginTop="120dp"
         android:id="@+id/konfirmasi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
