--- a/app/src/main/res/layout/activity_pay_confirm.xml
+++ b/app/src/main/res/layout/activity_pay_confirm.xml
@@ -136,13 +136,24 @@
     <Button
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="80dp"
         android:id="@+id/konfirmasi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:background="@drawable/selector_button"
         android:text="Konfirmasi Pembayaran"
+        android:textColor="@color/white_"/>
+    <Button
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginTop="35dp"
+        android:id="@+id/cancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:background="@drawable/selector_button"
+        android:text="Batal"
         android:textColor="@color/white_"/>
 
 </LinearLayout>
